- add known bug to TODO - update Mack's user documentation

--- a/src/howto.html
+++ b/src/howto.html
@@ -245,9 +245,22 @@ with a list of the tiers you control.  Select the tier in which the team should 
 
 <h3><a name="D.3">D.3. Add a week to a schedule</a></h3>
 
+<p>Start by accessing the schedule page for the tier you want to work on.  Click on the <b>Add a week</b> 
+link at the bottom of the schedule page.  You'll be presented with a calendar.  Click on the date you want to 
+add games for.  Now, fill in the matchups and field assignments for the games and hit submit.</p>
+
+<p>If you need to create a double header on a particular date, simply repeat the above steps for the date 
+of the double header.</p>
+
 <h3><a name="D.4">D.4. Edit an existing week in a schedule</a></h3>
 
+<p>So, you've already entered you schedule into the system but you've gotta fix something.  Here's what you do.
+Go and view the schedule for the tier you want to edit, and click on the <b>edit week</b> link in the week's 
+title box.  Once you've made your changes, hit submit.</p>
+
 <h3><a name="D.5">D.4. Fix mismatched scores</a></h3>
+
+<p>
 
 <h3><a name="D.6">D.5. Start a new round</a></h3>
 
