- final removal of all Smarty templating!!! - addition of mechanism for inserting pages (aka: interstitials) into the   regular flow, as prerequisites for loading another page.  This allows for a   much cleaner implementation of the waiver forms and the survey. - add survey_completed item to account table for better support of annual   surveys. - remove useless perms checks from PersonEdit, since we don't use them.

--- a/src/data/dog_waiver_form.html
+++ b/src/data/dog_waiver_form.html
@@ -1,7 +1,6 @@
-<h1>Informed Consent Form For Dog Owners</h1>
 <p>
-Since you have stated your desire to bring your dog to the field, you must
-agree to abide by the following waiver in order to activate your account.
+	Since you have indicated you wish to bring a dog to the fields, you
+	must agree to the following waiver in order to activate your account.
 </p>
 <p>
 If you have concerns about the data OCUA collects, please see our 
@@ -39,3 +38,7 @@ directors, officers, and employees harmless from any such damages, costs and
 claims. 
 </p>
 </blockquote>            
+<p>
+    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="yes" /> I agree to the above conditions</div>
+    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="no" /> I DO NOT agree to the above conditions</div>
+</p>
