--- a/src/data/waiver_form.html
+++ b/src/data/waiver_form.html
@@ -1,7 +1,6 @@
-<h1>Informed Consent Form For League Play</h1>
 <p>
-You must agree to abide by the following waiver in order to activate your
-account.
+	You must agree to the following waiver in order to activate your
+	account.
 </p>
 <p>
 If you have concerns about the data OCUA collects, please see our 
@@ -47,3 +46,7 @@ I agree to play fairly and by the rules, having regard to the safety and the
 enjoyment of other members.
 </p>
 </blockquote>            
+<p>
+    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="yes" /> I agree to the above conditions</div>
+    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="no" /> I DO NOT agree to the above conditions</div>
+</p>
