- update HOWTO doc to reflect some of the UI changes that have been made

--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -154,7 +154,7 @@ webmaster</a>.</p>
 
 <p>There are two ways to become part of a team:</p>
 <ol type="a"  style="margin-left: 20pt;">
-	<li><b>Ask to be a member:</b> This is accomplished by going into the system and clicking on <b>List Other Teams</b>.
+	<li><b>Ask to be a member:</b> This is accomplished by logging in and clicking on the <b>Teams</b> in the top menu.  You are presented with an alphabetical list of teams.  To see teams whose name starts with a given letter, click on that letter.
 	Once you have found the team you wish to join, click on <b>view</b> and then <b>join team</b>.  The captain will 
 	need to confirm you on the team after this.</li>
 	<li><b>Confirm membership request:</b> A captain can add you to his team.  Once he's done that you then have to accept 
@@ -177,8 +177,11 @@ next to your name in the roster list.  Select <b>remove from team</b> and you're
 
 <h3><a name="C.1">C.1. Create a new team</a></h3>
 
-<p>If you are captaining a team then you need to create the team in the system.  To do so, click on <b>Create new team</b> 
-from the main menu.  Provide your team's name, website (if appropriate) and shirt color.  There, you're done.</p>
+<p>If you are captaining a team then you need to create the team in the system.
+To do so, click on the <b>Teams</b> item in the top menu.  From there, click on
+<b>Create New Team</b>.  Provide your team's name, website (if appropriate) and
+shirt color.  There, you're done.  The team will be added to the "Inactive
+Teams" tier until the coordinator moves you to the appropriate league.</p>
 
 <p><b>Naming Convention:</b> If you are the captain of more then one team with the same name that plays on more then one 
 night, you will need create multiple teams.  In order to make it easy to differentiate between the teams, please append 
@@ -206,7 +209,7 @@ addition is official.</p>
 <p>Your players can go onto the system and add themselves to your team.  However, you still have to accept them onto your team 
 before they are official members.  To do this, go to the team info page and click on the <b>change status</b> link next to any 
 player who's status is shown as <b>requested by player</b>.  You will have the option of setting the person as a regular player, 
-a substitute, a captain, an assistent, or removing them from the team entirely</p>
+a substitute, a captain, an assistant, or removing them from the team entirely</p>
 
 <h3><a nane="C.5">C.5. Submit game score</a></h3>
 
@@ -236,10 +239,13 @@ team (still requires captain to accept).</p>
 
 <h3><a name="D.1">D.1. Move teams between tiers</a></h3>
 
-<p>Once your tiers are created, you'll need to move teams into them.  The first step is to find the team(s) you are looking 
-to move.  Unassigned teams can be found in the Inactive Teams tier (click on <b>List Leagues</b> on the main menu) and then 
-the <b>none</b> season, and then <b>view</b>.  Next to the team you want click on <b>move team</b>.  You will be presented 
-with a list of the tiers you control.  Select the tier in which the team should be placed, and hit submit.</p>
+<p>Once your tiers are created, you'll need to move teams into them.  The first
+step is to find the team(s) you are looking to move.  Unassigned teams can be
+found in the Inactive Teams tier (click on <b>Leagues</b> on the top menu) and
+then the <b>none</b> season, and then <b>view</b>.  Next to the team you want
+click on <b>move team</b>.  You will be presented with a list of the tiers you
+control.  Select the tier in which the team should be placed, and hit
+submit.</p>
 
 <h3><a name="D.2">D.2. Edit a tier's configuration</a></h3>
 
