A very productive all-nighter of hacking.  The way handlers are loaded has been changed, and "clean url" support (similar to Drupal) is partially implemented. Most things will NOT WORK on HEAD until this is finished, though user accounts and most team functions are currently done.
This commit also fixes a number of small typos, SQL errors, etc that were found
along the way, and adds TODO comments for some areas that need fixing or
updating to the new way of doing things.  Some dead and/or deprecated code has
been removed as well.

--- a/src/data/waiver_form.html
+++ b/src/data/waiver_form.html
@@ -45,6 +45,6 @@ I agree to play fairly and by the rules, having regard to the safety and the
 enjoyment of other members.
 </p>
 <p>
-    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="yes" /> I agree to the above conditions</div>
-    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="no" /> I DO NOT agree to the above conditions</div>
+    <div class="form-item"><input type="radio" class="form-radio" name="edit[signed]" value="yes" /> I agree to the above conditions</div>
+    <div class="form-item"><input type="radio" class="form-radio" name="edit[signed]" value="no" /> I DO NOT agree to the above conditions</div>
 </p>
