--- a/src/data/dog_waiver_form.html
+++ b/src/data/dog_waiver_form.html
@@ -37,6 +37,6 @@ directors, officers, and employees harmless from any such damages, costs and
 claims. 
 </p>
 <p>
-    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="yes" /> I agree to the above conditions</div>
-    <div class="form-item"><input type="radio" class="form-radio" name="signed" value="no" /> I DO NOT agree to the above conditions</div>
+    <div class="form-item"><input type="radio" class="form-radio" name="edit[signed]" value="yes" /> I agree to the above conditions</div>
+    <div class="form-item"><input type="radio" class="form-radio" name="edit[signed]" value="no" /> I DO NOT agree to the above conditions</div>
 </p>
