- updates to documentation

--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -20,6 +20,9 @@ Guides are broken down in to categories based on what sort of role you have in t
 things you're trying to do that aren't covered here.  If you have any questions, don't 
 hesitate to contact <a href="mailto:webmaster@ocua.ca">the webmasters</a></i></p>
 
+<p>If there are specific questions you're looking for the answers to, check out
+the <a href="faq.html">Leaguerunner FAQ</a>.</p>
+
 <!--  Table Of Contents -->
 <table border="0" cellpadding="15"><tr bgcolor="#f0f0f0"><td>
 <a name="toc"><b>Table Of Contents</b></a>
