Minor doc update

--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -113,7 +113,7 @@ the <a href="/leaguerunner/">login page</a> and click on <b>Forgot your password
 a form where you can enter any of your <b>membership number</b>, <b>username</b>, or <b>email address</b>.  The 
 system will email you a new password at the address that is in the system.  If you can't remember either your 
 membership number of your username and you don't have access to your email address of record any more, then you 
-will need to contact <a href="mailto:webmaster@ocua.ca">the webmaster</a> and provide your full name, street address, 
+will need to contact <a href="mailto:leaguerunner@ocua.ca">the leaguerunner administrator</a> and provide your full name, street address, 
 and date of birth so that we can confirm that you are in fact you.</p>
 
 <h3><a name="A.4">A.4. Edit Your Information</a></h3>
@@ -162,7 +162,7 @@ webmaster</a>.</p>
 	need to confirm you on the team after this.</li>
 	<li><b>Confirm membership request:</b> A captain can add you to his team.  Once he's done that you then have to accept 
 	membership on that team.  Any teams that you have been added to by a captain will show up in your main menu.  Click on 
-	<b>info</b> next to the team in question, and then <b>change status</b> next to your name on the team roster page.  You 
+	<b>info</b> next to the team in question, and then on the status next to your name on the team roster page.  You 
 	will be presented with the option of setting yourself to a regular, a substitute, or removing yourself from the team.</li>
 </ol>
 
@@ -193,7 +193,7 @@ something that indicates which night the team is for (<i>eg:</i> Fuzzy Pickles -
 <h3><a name="C.2">C.2. Add a co-captain</a></h3>
 
 <p>All teams in the system should have two captains on the team.  To mark someone as a team captain or assistent captain, 
-go to the info page for the team, and click on <b>change status</b> next to the person you wish to make co-captain.  
+go to the info page for the team, and click on the status next to the person you wish to make co-captain.  
 Select captain or assistent from the list and you're done.</p>
 
 <p><b>Please note:</b> Each team must have at least one captain listed in the system at all times, and preferably two.</p>
@@ -210,7 +210,7 @@ addition is official.</p>
 <h3><a name="C.4">C.4. Accept a player on your team</a></h3>
 
 <p>Your players can go onto the system and add themselves to your team.  However, you still have to accept them onto your team 
-before they are official members.  To do this, go to the team info page and click on the <b>change status</b> link next to any 
+before they are official members.  To do this, go to the team info page and click on the status link next to any 
 player who's status is shown as <b>requested by player</b>.  You will have the option of setting the person as a regular player, 
 a substitute, a captain, an assistant, or removing them from the team entirely</p>
 
