Partial update of docs

--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -89,14 +89,10 @@ be asked to:</p>
 <ol type="a" style="margin-left: 20pt;">
 	<li>Sign the <a href="http://www.ocua.ca/leaguerunner/index.php?op=system_viewfile&file=player_waiver">waiver form</a></li>
 	<li>Optionally sign the <a href="http://www.ocua.ca/leaguerunner/index.php?op=system_viewfile&file=dog_waiver">Dog owner waiver form</a> if you intend to bring your dog(s) to games.</li>
-	<li>Fill out a brief demographic survey.</li>
 </ol>
 
 <p>If you do not sign either of the waver forms your account will not become active, and you can't register with 
-your team(s).  You don't have to fill out the survey, but we would really like it if you did.  Once the data is 
-entered there is <b>absolutely no way</b> for us to trace it back to you, and having lots of accurate information 
-will significantly help the league in lobbying the city for new fields, getting sponsorship for tournaments, and 
-other great stuff.</p>
+your team(s).</p>
 
 <p>Once you're done all that, you can start using the rest of the system.</p>
 
@@ -112,26 +108,27 @@ If you don't have an account yet, you have to <a href="#A.1">create one first</a
 the <a href="/leaguerunner/">login page</a> and click on <b>Forgot your password?</b>.  You will be brought to 
 a form where you can enter any of your <b>membership number</b>, <b>username</b>, or <b>email address</b>.  The 
 system will email you a new password at the address that is in the system.  If you can't remember either your 
-membership number of your username and you don't have access to your email address of record any more, then you 
+membership number or your username and you don't have access to your email address of record any more, then you 
 will need to contact <a href="mailto:leaguerunner@ocua.ca">the leaguerunner administrator</a> and provide your full name, street address, 
 and date of birth so that we can confirm that you are in fact you.</p>
 
 <h3><a name="A.4">A.4. Edit Your Information</a></h3>
 
 <p>If any of your contact information has changed from when you first created your account, then you'll need to 
-update it.  First of all, <a href="/leaguerunner/">login to the system</a>.  Then, from the main menu, select 
-<b>View/Edit my account</b> and then <b>edit</b>.  Once you've updated all the appropriate info, hit <b>submit</b> 
-and you're done.</p>
+update it.  First of all, <a href="/leaguerunner/">login to the system</a>.
+Then, from the sidebar menu, click on <b>My Account</b>, and then <b>edit</b>.
+Once you've updated all the appropriate info, hit <b>submit</b>.  You will see a confirmation page, so check that all your information is correct, then submit again and you're done.</p>
 
 <h3><a name="A.5">A.5. Change your password</a></h3>
 
-<p>Login, click <b>Change Password</b> from the main menu, and enter your choice for a new password.</p>
+<p>Login, click on <b>My Account</b> from the left menu, then click "change password" and follow the directions.</p>
 
 <h3><a name="A.6">A.6. What can people see?</a></h3>
 
-<p>When you are entering / editing your personal information, there are check boxes next to your email address 
-and phone numbers.  If you check one of those boxes, that piece of information will be publicly available to 
-anyone logged in to the system.  Anything without a check box next to it is always hidden (besides your name).</p>
+<p>When you are entering / editing your personal information, there are check
+boxes next to your email address and phone numbers.  If you check one of those
+boxes, that piece of information will be publicly available to any other OCUA
+player logged in to the system.  Your gender, skill level, name, and the list of teams you play on will always be visible, but other information will not be.</p>
 
 <p>There are some exceptions to the above rule:</p>
 <ul style="margin-left: 20pt;">
@@ -157,19 +154,23 @@ webmaster</a>.</p>
 
 <p>There are two ways to become part of a team:</p>
 <ol type="a"  style="margin-left: 20pt;">
-	<li><b>Ask to be a member:</b> This is accomplished by logging in and clicking on the <b>Teams</b> in the top menu.  You are presented with an alphabetical list of teams.  To see teams whose name starts with a given letter, click on that letter.
-	Once you have found the team you wish to join, click on <b>view</b> and then <b>join team</b>.  The captain will 
+	<li><b>Ask to be a member:</b> This is accomplished by logging in and clicking on <b>list teams</b> in the side menu.  You are presented with an alphabetical list of teams.  To see teams whose name starts with a given letter, click on that letter.
+	Once you have found the team you wish to join, click on <b>view</b> and then click <b>join team</b> in the left menu.  The captain will 
 	need to confirm you on the team after this.</li>
-	<li><b>Confirm membership request:</b> A captain can add you to his team.  Once he's done that you then have to accept 
-	membership on that team.  Any teams that you have been added to by a captain will show up in your main menu.  Click on 
-	<b>info</b> next to the team in question, and then on the status next to your name on the team roster page.  You 
-	will be presented with the option of setting yourself to a regular, a substitute, or removing yourself from the team.</li>
+	<li><b>Confirm membership request:</b> A captain can add you to his
+	team.  Once he's done that you then have to accept membership on that
+	team.  Any teams that you have been added to by a captain will show up
+	in your main menu.  Click on the team's name, and then on the
+	"position" in the second column beside your name on the team roster
+	page.  You will be presented with the option of setting yourself to a
+	regular, a substitute, or removing yourself from the team.</li>
 </ol>
 
 <h3><a name="B.2">B.2. Leave a team</a></h3>
 
-<p>To leave a team you are currently on, click on <b>info</b> next to the team in question, and then <b>change status</b> 
-next to your name in the roster list.  Select <b>remove from team</b> and you're done.</p>
+<p>To leave a team you are currently on, first view the team, and then click on
+the position next to your name in the roster list.  Select <b>remove from
+team</b> and you're done.</p>
 
 <p><font size="-2"><a href="#toc">Back to top</a></font></p>
 
@@ -180,45 +181,52 @@ next to your name in the roster list.  Select <b>remove from team</b> and you're
 
 <h3><a name="C.1">C.1. Create a new team</a></h3>
 
-<p>If you are captaining a team then you need to create the team in the system.
-To do so, click on the <b>Teams</b> item in the top menu.  From there, click on
-<b>Create New Team</b>.  Provide your team's name, website (if appropriate) and
-shirt color.  There, you're done.  The team will be added to the "Inactive
-Teams" tier until the coordinator moves you to the appropriate league.</p>
+<p>If you are captaining a brand new team then you need to create the team in
+the system.  To do so, click on the <b>create team</b> item in the side menu.
+Provide your team's name, website (if appropriate) and shirt color.  There,
+you're done.  The team will be added to the "Inactive Teams" tier until the
+coordinator moves you to the appropriate league.</p>
 
-<p><b>Naming Convention:</b> If you are the captain of more then one team with the same name that plays on more then one 
-night, you will need create multiple teams.  In order to make it easy to differentiate between the teams, please append 
-something that indicates which night the team is for (<i>eg:</i> Fuzzy Pickles - Mon)</p>
+<p><b>Naming Convention:</b> If you are the captain of more then one team with
+the same name that plays on more then one night, you will need create multiple
+teams.  In order to make it easy to differentiate between the teams, please
+append something that indicates which night the team is for (<i>eg:</i> Fuzzy
+Pickles - Monday)</p>
 
 <h3><a name="C.2">C.2. Add a co-captain</a></h3>
 
-<p>All teams in the system should have two captains on the team.  To mark someone as a team captain or assistent captain, 
-go to the info page for the team, and click on the status next to the person you wish to make co-captain.  
-Select captain or assistent from the list and you're done.</p>
+<p>All teams in the system should have two captains on the team.  To mark
+someone as a team captain or assistent captain, go to the info page for the
+team, and click on the status next to the person you wish to make co-captain.
+Select captain or assistant from the list and you're done.</p>
 
-<p><b>Please note:</b> Each team must have at least one captain listed in the system at all times, and preferably two.</p>
+<p><b>Please note:</b> Each team must have at least one captain and one assistant (or two captains, if you so choose).</p>
 
 <h3><a name="C.3">C.3. Add a player to your team</a></h3>
 
-<p>Rather then waiting for your players to add themselves to your team's roster, you can go out and add them instead.  You 
-do this by going to the team info page, and clicking on <b>add player</b>.  From there you can browse through all the people 
-in the system until you find the person you're looking for.  Click on <b>add player</b> and you're done.</p>
+<p>Rather then waiting for your players to add themselves to your team's
+roster, you can go out and add them instead.  You do this by going to the team
+info page, and clicking on <b>add player</b> in the left menu.  From there you
+can browse through all the people in the system until you find the person
+you're looking for.  Click on <b>add player</b> and you're done.</p>
 
-<p><b>Please note:</b> The person you added to your team still has to go and confirm that they are on your team before the 
-addition is official.</p>
+<p><b>Please note:</b> The person you added to your team still has to log in
+and confirm that they are on your team before the addition is official.</p>
 
 <h3><a name="C.4">C.4. Accept a player on your team</a></h3>
 
-<p>Your players can go onto the system and add themselves to your team.  However, you still have to accept them onto your team 
-before they are official members.  To do this, go to the team info page and click on the status link next to any 
-player who's status is shown as <b>requested by player</b>.  You will have the option of setting the person as a regular player, 
-a substitute, a captain, an assistant, or removing them from the team entirely</p>
+<p>Your players can go onto the system and add themselves to your team.
+However, you still have to accept them onto your team before they are official
+members.  To do this, go to the team info page and click on the position link
+next to any player whose status is shown as <b>requested by player</b>.  You
+will have the option of setting the person as a regular player, a substitute, a
+captain, an assistant, or removing them from the team entirely</p>
 
 <h3><a nane="C.5">C.5. Submit game score</a></h3>
 
 <p>One of your most important tasks as a team captain is the timely submission of scores and spirit ratings after a game.  To 
-do this click on the <b>scores and schedules</b> link on the main menu next to the team you are submitting for.  Once presented 
-with the schedule view, click on the <b>submit score</b> link next to the game your are submitting.  Enter the final score of the 
+do this click on the team name in the left menu, then click <b>schedule</b>
+In the schedule view, click on the <b>submit score</b> link next to the game your are submitting.  Enter the final score of the 
 game, and the SOTG score for your opponents, and hit submit.</p>
 
 <p>Standings aren't updated until both captains have submitted matching scores.  If your score entry and your opponent's don't 
@@ -230,8 +238,9 @@ match, then the coordinator will need to resolve the discrepancy before the fina
 new players to their team (still requires player to accept).  If a team is open, individuals can add themselves to your 
 team (still requires captain to accept).</p>
 
-<p>To change your team from open to closed (and vice versa) simply go to the info page for your team and click on 
-<b>edit team</b> and select the appropriate new state.</p>
+<p>To change your team from open to closed (and vice versa) simply go to the
+info page for your team, click on <b>edit team</b> in the left menu, and select
+the appropriate new state.</p>
 
 <p><font size="-2"><a href="#toc">Back to top</a></font></p>
 
@@ -244,11 +253,10 @@ team (still requires captain to accept).</p>
 
 <p>Once your tiers are created, you'll need to move teams into them.  The first
 step is to find the team(s) you are looking to move.  Unassigned teams can be
-found in the Inactive Teams tier (click on <b>Leagues</b> on the top menu) and
-then the <b>none</b> season, and then <b>view</b>.  Next to the team you want
-click on <b>move team</b>.  You will be presented with a list of the tiers you
-control.  Select the tier in which the team should be placed, and hit
-submit.</p>
+found in the Inactive Teams tier (in the left menu) and then the <b>none</b>
+season, and then <b>view</b>.  Next to the team you want click on <b>move
+team</b>.  You will be presented with a list of the tiers you control.  Select
+the tier in which the team should be placed, and hit submit.</p>
 
 <h3><a name="D.2">D.2. Edit a tier's configuration</a></h3>
 
