--- a/src/data/waiver_form.html
+++ b/src/data/waiver_form.html
@@ -1,10 +1,29 @@
 <p>
 	You must agree to the following waiver in order to activate your
-	account.
+	account and play in any OCUA games.
 </p>
 <p>
-If you have concerns about the data OCUA collects, please see our 
-<b><font color=red><a href="http://www.ocua.ca/ocua/policy/privacy_policy.html" target="_new">Privacy Policy</a></font></b>
+While the sport of ultimate is understood to be a non-contact sport, this does
+not mean that contact does not occur. Ultimate is a fast paced, athletic sport,
+and as such has all of the attendant risks that are commonly associated with
+such an activity. While all players are expected to adhere to the spirit of
+sportsmanship as outlined in the rules of the sport, it is not possible to
+absolutely ensure that contact between players will not occur, and that
+injuries will not be sustained. Members are reminded that they engage in the
+sport entirely at their own risk.
+</p>
+<p>
+Given that OCUA offers the sport of ultimate at varied and dispersed locations,
+and does not have officials such as referees at the games, it falls to the
+Captains of the teams to be responsible for the safety of the site at which
+they are playing and for the well being of their players.  Captains are
+responsible to examine the field of play before their game begins, to determine
+if it is safe. They are ultimately responsible for the actions of their players
+and their safety, and must be prepared to take appropriate action if they feel
+that safety is being compromised. This includes refusing to play on a site they
+deem to be potentially hazardous, or against an opponent they feel is playing
+in an unsafe fashion. OCUA never forces its members to play when they are not
+comfortable doing so; games can easily be rescheduled.
 </p>
 <p>
 I, as a member of and player participating in OCUA's Ultimate League in the
