Fix privacy policy link

--- a/src/data/dog_waiver_form.html
+++ b/src/data/dog_waiver_form.html
@@ -4,7 +4,7 @@
 </p>
 <p>
 If you have concerns about the data OCUA collects, please see our 
-<b><font color=red><a href="http://www.ocua.ca/ocua/policy/privacy_policy.html" target="_new">Privacy Policy</a></font></b>
+<b><font color=red><a href="http://www.ocua.ca/node/17" target="_new">Privacy Policy</a></font></b>
 </p>
 <p>
 I am a member of the Ottawa Carleton Ultimate Association (OCUA), and the
