--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -140,7 +140,7 @@ player logged in to the system.  Your gender, skill level, name, and the list of
 </ul>
 
 <p>If you have any concerns about your information being made available to outside parties, please 
-<a href="/ocua/policy/privacy_policy.html">review our Privacy Policy</a> and / or contact <a href="mailto:webmaster@ocua.ca">the 
+<a href="http://www.ocua.ca/node/17">review our Privacy Policy</a> and / or contact <a href="mailto:webmaster@ocua.ca">the 
 webmaster</a>.</p>
 
 <p><font size="-2"><a href="#toc">Back to top</a></font></p>
