--- a/src/data/member_survey.html
+++ b/src/data/member_survey.html
@@ -11,7 +11,7 @@ your account.  This information is stored separately from your user account,
 and will never be associated with your OCUA user account or traceable to your
 identity in any way.
 If you have concerns about the data OCUA collects, please see our 
-<b><font color=red><a href="http://www.ocua.ca/ocua/policy/privacy_policy.html" target="_new">Privacy Policy</a></font></b>
+<b><font color=red><a href="http://www.ocua.ca/node/17" target="_new">Privacy Policy</a></font></b>
 </p>
 <p>
   Note that all questions are voluntary and you may choose not to answer some
