--- a/src/data/faq.html
+++ b/src/data/faq.html
@@ -60,8 +60,8 @@ href="mailto:webmaster@ocua.ca">the webmasters</a></i>
     Here's how it works.  Each team starts at 1500, and moves up or down from
     there based on game performance.  Each game is worth a base value, adjusted
     for strength of schedule (based on your rating as compared to your
-    opponent's rating) with bonuses given for higher point-differentials (
-    games won by a difference of more than 1/3 the winning score ).  The
+    opponent's rating) with bonuses given for higher point-differentials
+    (games won by a difference of more than 1/3 the winning score).  The
     winning team gets the value for that game added to their rating, and the
     losing team gets it subtracted.  In this manner, "upset" wins are worth
     more than "expected" wins for rating purposes,  so if a team with a 1500
