Made a few links and references more generic. Still some links and email addresses we can't do anything about right now (maybe a template replacement system in the future?)

--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -87,8 +87,8 @@ password emailed to you.</p>
 be asked to:</p>
 
 <ol type="a" style="margin-left: 20pt;">
-	<li>Sign the <a href="http://www.ocua.ca/leaguerunner/index.php?op=system_viewfile&file=player_waiver">waiver form</a></li>
-	<li>Optionally sign the <a href="http://www.ocua.ca/leaguerunner/index.php?op=system_viewfile&file=dog_waiver">Dog owner waiver form</a> if you intend to bring your dog(s) to games.</li>
+	<li>Sign the <a href="/leaguerunner/index.php?op=system_viewfile&file=player_waiver">waiver form</a></li>
+	<li>Optionally sign the <a href="/leaguerunner/index.php?op=system_viewfile&file=dog_waiver">Dog owner waiver form</a> if you intend to bring your dog(s) to games.</li>
 </ol>
 
 <p>If you do not sign either of the waver forms your account will not become active, and you can't register with 
@@ -127,7 +127,7 @@ Once you've updated all the appropriate info, hit <b>submit</b>.  You will see a
 
 <p>When you are entering / editing your personal information, there are check
 boxes next to your email address and phone numbers.  If you check one of those
-boxes, that piece of information will be publicly available to any other OCUA
+boxes, that piece of information will be publicly available to any other
 player logged in to the system.  Your gender, skill level, name, and the list of teams you play on will always be visible, but other information will not be.</p>
 
 <p>There are some exceptions to the above rule:</p>
