--- a/src/data/howto.html
+++ b/src/data/howto.html
@@ -196,7 +196,7 @@ Pickles - Monday)</p>
 <h3><a name="C.2">C.2. Add a co-captain</a></h3>
 
 <p>All teams in the system should have two captains on the team.  To mark
-someone as a team captain or assistent captain, go to the info page for the
+someone as a team captain or assistant captain, go to the info page for the
 team, and click on the status next to the person you wish to make co-captain.
 Select captain or assistant from the list and you're done.</p>
 
